--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+},
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.12",
@@ -20,6 +19,9 @@
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.12"
   },
+  "engines": {
+  "node": "20.x"
+},
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
@@ -32,3 +34,4 @@
     "vite": "^7.1.2"
   }
 }
+
